--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,9 @@
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
     </div><!-- /.entry-content -->
-    {% include author.html %}
+    {% if page.show_author %}
+      {% include author.html %}
+    {% endif %}
     {% if page.comments != false and site.disqus_shortname %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
     {% if site.related_posts.size > 0 %}{% include read-more.html %}{% endif %}
   </article>
