--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,9 @@
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
         {% endif %}
+        {% if post.show_author %} <!-- TODO add author page details, show by author only when the page has the author details defined -->
         <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>
+        {% endif %}
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
     </div><!-- /.entry-content -->
