--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,26 +1,29 @@
-<div class="read-more">
-  <div class="read-more-header">
-    <a href="{{ site.owner.site }}" class="read-more-btn">About the Author</a>
-  </div><!-- /.read-more-header -->
-  <div class="read-more-content author-info">
-    <h3>{{site.owner.name}}</h3>
-    <div class="author-container">
-      <img class="author-img" src="{{site.url}}/{{site.owner.avatar}}" alt="{{site.owner.name}}" />
-      <div class="author-bio">{{site.owner.bio}}</div>
-    </div>
-    <div class="author-share">
-      <ul class="list-inline social-buttons">
-        {% for network in site.social %}
-          <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
-        {% endfor %}
-      </ul>
-      {% if site.owner.github %}
-        <a aria-label="Follow @{{site.owner.github}} on GitHub" data-style="mega" href="https://github.com/{{site.owner.github}}" class="github-button">Follow @{{site.owner.github}}</a>
-      {% endif %}
-      <br>
-      {% if site.owner.twitter %}
-        <a href="https://twitter.com/{{site.owner.twitter}}" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @{{site.owner.twitter}}</a>
-      {% endif %}
+{% assign author = site.data.authors[page.author] %}
+{% if author %}
+  <div class="read-more">
+    <div class="read-more-header">
+      <a href="{{ author.site }}" class="read-more-btn">About the Author</a>
+    </div><!-- /.read-more-header -->
+    <div class="read-more-content author-info">
+      <h3>{{author.name}}</h3>
+      <div class="author-container">
+        <img class="author-img" src="{{site.url}}/{{author.avatar}}" alt="{{author.name}}" />
+        <div class="author-bio">{{author.bio}}</div>
+      </div>
+      <div class="author-share">
+        <ul class="list-inline social-buttons">
+          {% for network in site.social %}
+            <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
+          {% endfor %}
+        </ul>
+        {% if author.github %}
+          <a aria-label="Follow @{{author.github}} on GitHub" data-style="mega" href="https://github.com/{{author.github}}" class="github-button">Follow @{{author.github}}</a>
+        {% endif %}
+        <br>
+        {% if author.twitter %}
+          <a href="https://twitter.com/{{author.twitter}}" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @{{author.twitter}}</a>
+        {% endif %}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
