--- a/_includes/author.html
+++ b/_includes/author.html
@@ -12,7 +12,7 @@
       </div>
       <div class="author-share">
         <ul class="list-inline social-buttons">
-          {% for network in site.social %}
+          {% for network in author.social %}
             <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
           {% endfor %}
         </ul>
