remove coderay and update syntax highlight post

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,7 +21,7 @@ sitemap: false
 @import "typography";
 //@import "rouge";//replaced rouge with syntax at recommendation from Jekyll
 @import "syntax";
-@import "coderay";
+//@import "coderay";
 @import "grid";
 @import "elements";
 @import "animations";
