--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,9 @@
         {% endif %}
       <h1 class="post-title entry-title">{{ page.title }}</h1>
       {{ content }}
+      {% if page.republished %}
+        {% include republished.html %}
+      {% endif %}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
