--- a/_includes/author.html
+++ b/_includes/author.html
@@ -7,7 +7,11 @@
     <div class="read-more-content author-info">
       <h3>{{author.name}}</h3>
       <div class="author-container">
-        <img class="author-img" src="{{site.url}}/{{author.avatar}}" alt="{{author.name}}" />
+        {% if author.avatar_url %}
+          <img class="author-img" src="{{author.avatar_url}}" alt="{{author.name}}" />
+        {% else %}
+          <img class="author-img" src="{{site.url}}/{{author.avatar}}" alt="{{author.name}}" />
+        {% endif %}
         <div class="author-bio">{{author.bio}}</div>
       </div>
       <div class="author-share">
