--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
 </head>
 
 <body id="post" {% if page.image.feature %}class="feature"{% endif %}>
-
+{% include github-fork-ribbon.html %}
 {% include browser-upgrade.html %}
 {% include header.html %}
 
