--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -4,6 +4,7 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
+<meta name="google-site-verification" content="Wa8Wb9yWU1ogyobZwHfNJOXS2RJ0u1gmN6MDsjJpfjU" />  
 {% include head.html %}
 </head>
 
