--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,7 @@
         {% endif %}
       <h1 class="post-title entry-title">{{ page.title }}</h1>
       {{ content }}
+      {% include mailchimp.html %}
       {% if page.republished %}
         {% include republished.html %}
       {% endif %}
