--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,4 @@
+{% assign author = site.data.authors[page.author] %}
 <!doctype html>
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
@@ -31,13 +32,15 @@
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
         {% endif %}
-        {% if post.show_author %} <!-- TODO add author page details, show by author only when the page has the author details defined -->
-        <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>
+        {% if author %}
+        <span class="author vcard"><span class="fn">{{ author.name }}</span></span>
         {% endif %}
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
     </div><!-- /.entry-content -->
+    {% if author %}
     {% include author.html %}
+    {% endif %}
     {% if page.comments != false and site.disqus_shortname %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
     {% if site.related_posts.size > 0 %}{% include read-more.html %}{% endif %}
   </article>
