scroll up working, but by loading separate script and still needs some scss adjusting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,5 +54,8 @@
   </footer>
 </div><!-- /.footer-wrapper -->
 
+<!-- scroll to top -->
+<a href="#0" class="cd-top">Top</a>
+<script type="text/javascript" src="{{ site.url }}/assets/js/scroll-up.js"></script>
 </body>
 </html>
