--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -6,6 +6,9 @@ body {
 	overflow-x: hidden;
 }
 
+pre {
+  position: relative;
+}
 // Main
 // --------------------------------------------------
 .entry,
