--- a/_includes/source-code-codingmarks.html
+++ b/_includes/source-code-codingmarks.html
@@ -1,4 +1,4 @@
 <p class="note_normal">
   <img style="float: left; width: 35px; height: 29px; margin-right: 10px;" src="{{site.url}}/wp-content/uploads/2015/06/Octocat-smaller.png" alt="Octocat" />
-  Source code for <a href="https://www.codingmarks.org" target="_blank">codingmarks.org</a> is available on Github - <a href="https://github.com/CodepediaOrg/bookmarks.org" target="_blank">frontend</a> and <a href="https://github.com/CodepediaOrg/bookmarks-api" target="_blank">backend</a>.
+  Source code for <a href="https://www.bookmarks.dev" target="_blank">bookmarks.dev</a> is available on Github - <a href="https://github.com/CodepediaOrg/bookmarks.dev" target="_blank">frontend</a> and <a href="https://github.com/CodepediaOrg/bookmarks-api" target="_blank">backend</a>.
 </p>
