increase fonts for better readability

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,14 +31,13 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 
-<!-- Load highlight.js - https://highlightjs.org/-->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
-
+<!-- Load highlight.js - https://highlightjs.org/
+<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/default.min.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+-->
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-<script>hljs.initHighlightingOnLoad();</script>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/jquery.mmenu.all.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/css/jquery.floating-social-share.min.css">
 <!-- Webfonts -->
