--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,20 +1,5 @@
 <!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="//codingpedia.us13.list-manage.com/subscribe/post?u=0e6b161c06fa73bbc9fab476e&amp;id=1b83d82f05" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Get more coding resources and news</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0e6b161c06fa73bbc9fab476e_1b83d82f05" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
+<div style="text-align:center">
+  <a href="http://eepurl.com/djyZYf" target="_blank" style="margin-top: 2.5rem; alignment: center; font-size: 1.5rem">Subscribe to our newsletter for more code resources and news</a>
 </div>
-
 <!--End mc_embed_signup-->
