make texts shorter in paragraphs and code longer - it improves readability

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,3 +1,11 @@
+div.highlighter-rouge {
+  width: 110%;
+  margin-left: -5%;
+}
+code.highlighter-rouge {
+  width: 100%;
+  margin-left: 0;
+}
 .highlight {
   margin-bottom: 1.5em;
   @include font(15);
