update once again the bookmarklet text

--- a/_includes/promote-codingmarks.html
+++ b/_includes/promote-codingmarks.html
@@ -3,7 +3,7 @@
   <img src="/images/bookmarks/bookmarks.dev-logo-md.png" alt="Dev-Bookmarks Logo" />
   <p>
     Bookmarking for Developers & Co with <span class="highlight-yellow"><a href="https://www.bookmarks.dev" target="_blank">www.bookmarks.dev</a></span>.
-    Add our <strong><a href="javascript:(function(){location.href='https://www.bookmarks.dev/personal/new?url='+encodeURIComponent(location.href);})();" class="nav-link">+Dev Bookmark</a></strong>
+    Use our <strong><a href="javascript:(function(){location.href='https://www.bookmarks.dev/personal/new?url='+encodeURIComponent(location.href);})();" class="nav-link">Add to bookmarks.dev</a></strong>
     bookmarklet to your bookmarks toolbar for a seamless experience. Share your favorites with the community and they will be published on <a href="https://github.com/CodepediaOrg/bookmarks" target="_blank">Github</a>
     - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/CodepediaOrg/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
   </p>
