remove unused class

--- a/_includes/promote-codingmarks.html
+++ b/_includes/promote-codingmarks.html
@@ -3,7 +3,7 @@
   <img src="/images/bookmarks/bookmarks.dev-logo-md.png" alt="Dev-Bookmarks Logo" />
   <p>
     Bookmarking for Developers & Co with <span class="highlight-yellow"><a href="https://www.bookmarks.dev" target="_blank">www.bookmarks.dev</a></span>.
-    Use our <strong><a href="javascript:(function(){let l=location.href;if(document.getSelection){d=document.getSelection()}else{d=''}let t=document.title;let w,h;if(innerWidth>1500){w=1210}else{w=(innerWidth*80)/100}if(innerHeight>1500){h=1210}else{h=(innerHeight*90)/100}let features=`toolbar=no,width=${w},height=${h},top=0,left=0`;open('https://www.bookmarks.dev/personal/new?url='+encodeURIComponent(l)+'&desc='+encodeURIComponent(d)+'&title='+encodeURIComponent(t)+'&popup=true','Bookmarks.dev',features);})();" class="nav-link">
+    Use our <strong><a href="javascript:(function(){let l=location.href;if(document.getSelection){d=document.getSelection()}else{d=''}let t=document.title;let w,h;if(innerWidth>1500){w=1210}else{w=(innerWidth*80)/100}if(innerHeight>1500){h=1210}else{h=(innerHeight*90)/100}let features=`toolbar=no,width=${w},height=${h},top=0,left=0`;open('https://www.bookmarks.dev/personal/new?url='+encodeURIComponent(l)+'&desc='+encodeURIComponent(d)+'&title='+encodeURIComponent(t)+'&popup=true','Bookmarks.dev',features);})();">
     Add to Bookmarks.dev</a></strong> bookmarklet to your bookmarks toolbar for a seamless experience. Share your favorites with the community and they will be published on <a href="https://github.com/CodepediaOrg/bookmarks" target="_blank">Github</a>
     - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/CodepediaOrg/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
   </p>
