fix(promotion-of-bookmarksdev): change from dash "-" by mistake

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
             </div>
         {% endif %}
       <h1 class="post-title entry-title">{{ page.title }}</h1>
-      {% include promote-codingmarks.html %}
+      {% include promote-bookmarks.dev.html %}
       {{ content }}
       {% include mailchimp.html %}
       {% if page.republished %}
