rename codelets to code-snippets in promotion paragraph

--- a/_includes/promote-bookmarks.dev.html
+++ b/_includes/promote-bookmarks.dev.html
@@ -3,7 +3,7 @@
   <img src="/images/bookmarks/bookmarks.dev-logo-md.png" alt="Dev-Bookmarks Logo" />
   <p>
     <strong>(P)</strong><strong> <a href="https://www.bookmarks.dev" target="_blank">Bookmarks.dev</a></strong>
-    - <a href="https://github.com/BookmarksDev/bookmarks.dev" target="_blank">Open source</a> Bookmarks and Codelets Manager for Developers & Co.
+    - <a href="https://github.com/BookmarksDev/bookmarks.dev" target="_blank">Open source</a> Bookmarks and Code Snippets Manager for Developers & Co.
     See our <a href="https://www.bookmarks.dev/howto" target="_blank">How To guides</a> to help you get started.
     Share your favorites bookmarks with the community and they might get published on <a href="https://github.com/BookmarksDev/bookmarks" target="_blank">Github</a>
     - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/BookmarksDev/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
