make headers bigger and change line height
Thus the titles display much better when longer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
 <div class="header-menu header-menu-top">
     <ul class="header-item-container">
-      <li class="header-item-title header-toggle "><a href="#menu"><h2><i class="fa fa-bars"></i></h2></a></li>
+      <li class="header-item-title header-toggle "><a href="#menu"><i class="fa fa-bars"></i></a></li>
       <li class="header-item-title">
         <a href="{{site.url}}/">
           {% if site.logo %}
@@ -12,7 +12,7 @@
           <a href="{{site.url}}/" class="title"> {{ site.title }}</a>
         </a>
       </li>
-      <li class="header-item"><a href="{{site.url}}/feed.xml"><h3>Feed <i class="fa fa-rss"></i></h3></a></li>
+      <li class="header-item"><a href="{{site.url}}/feed.xml">Feed <i class="fa fa-rss"></i></a></li>
       {% for menu in site.menu reversed %}
         {% assign class = nil %}
         {% if ((page.url contains menu.url and menu.url != '/') or (page.url == '/index.html' and menu.url == '/')) %}
@@ -20,16 +20,10 @@
         {% endif %}
 
         {% if menu.type == 'categories' %}
-          <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
-            <ul class="header-submenu">
-              {% for item in (0..site.categories.size) %}{% unless forloop.last %}
-                {% capture this_word %}{{ cats_list[item] | strip_newlines }}{% endcapture %}
-                  <li class="sub-item"><a href="/categories/#{{this_word}}">{{this_word}}</a></li>
-              {% endunless %}{% endfor %}
-            </ul>
+          <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}">{{ menu.title }}</a>
           </li>
         {% elsif menu.submenu %}
-          <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+          <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}">{{ menu.title }}</a>
             <ul class="header-submenu">
               {% for sub in menu.submenu %}
                 <li class="sub-item"><a href="{{site.url}}{{sub.url}}">{{sub.title}}</a></li>
@@ -38,13 +32,13 @@
           </li>
         {% else %}
             {% if menu.url contains 'http://' or menu.url contains 'https://' %}
-                <li class="header-item {{class}}"><a href="{{menu.url}}" target="_blank"><h3>{{ menu.title }}</h3></a></li>
+                <li class="header-item {{class}}"><a href="{{menu.url}}" target="_blank">{{ menu.title }}</a></li>
             {% else %}
-                <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+                <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}">{{ menu.title }}</a></li>
             {% endif %}
         {% endif %}
       {% endfor %}
-      <li class="header-item"><a href="{{site.url}}/search"><h3><i class="fa fa-search"></i></h3></a></li>
+      <li class="header-item"><a href="{{site.url}}/search"><i class="fa fa-search"></i></a></li>
     </ul>
   </div>
 <div class="entry-header">
@@ -77,16 +71,10 @@
   <ul>
     {% for menu in site.menu %}
       {% if menu.type == 'categories' %}
-        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
-          <ul>
-            {% for item in (0..site.categories.size) %}{% unless forloop.last %}
-              {% capture this_word %}{{ cats_list[item] | strip_newlines }}{% endcapture %}
-                <li><a href="{{site.url}}/categories/#{{this_word}}">{{this_word}}</a></li>
-            {% endunless %}{% endfor %}
-          </ul>
+        <li><a href="{{site.url}}{{menu.url}}">{{ menu.title }}</a>
         </li>
       {% elsif menu.submenu %}
-        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+        <li><a href="{{site.url}}{{menu.url}}">{{ menu.title }}</a>
           <ul>
             {% for sub in menu.submenu %}
               <li><a href="{{site.url}}{{sub.url}}">{{sub.title}}</a></li>
@@ -94,7 +82,7 @@
           </ul>
         </li>
       {% else %}
-        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+        <li><a href="{{site.url}}{{menu.url}}">{{ menu.title }}</a></li>
       {% endif %}
     {% endfor %}
   </ul>
