--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -10,11 +10,24 @@ body {
 // --------------------------------------------------
 h1, h2, h3, h4, h5, h6 {
 	font-family: $heading-font;
+  line-height: 1.3;
 }
 h1 {
-	@include font-rem(28);
+	@include font-rem(40);
 	@media #{$medium} {
-		@include font-rem(32);
+		@include font-rem(38);
+	}
+}
+h2 {
+	@include font-rem(34);
+	@media #{$medium} {
+		@include font-rem(34);
+	}
+}
+h3 {
+	@include font-rem(26);
+	@media #{$medium} {
+		@include font-rem(26);
 	}
 }
 
