post(snippet) - first generated snippet post: How to generate a comma separated string from array in JavaScript

--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,5 +1,5 @@
 <!-- Begin MailChimp Signup Form -->
-<div style="text-align:center">
+<div style="text-align:center; margin-top: 3rem">
   <a href="http://eepurl.com/djyZYf" target="_blank" style="margin-top: 2.5rem; alignment: center; font-size: 1.5rem">Subscribe to our newsletter for more code resources and news</a>
 </div>
 <!--End mc_embed_signup-->
