--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -61,3 +61,15 @@
 b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a {
 	@include transition(all .2s ease);
 }
+
+.copy-to-mine-btn {
+  font: bold 0.875rem Arial;
+  font-weight: 400;
+  text-decoration: none;
+  background-color: #f8f9fa;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border: 1px solid #f8f9fa;
+  border-radius: .2rem;
+  line-height: 1.5;
+}
