replace http to https in http://www.codepedia.org

--- a/_includes/homeJSONLD.html
+++ b/_includes/homeJSONLD.html
@@ -19,7 +19,7 @@
       "@type": "Person",
       "name": "Adrian Matei",
       "description": "Software engineer, blogger at Codepedia.org and creator of Bookmarks.dev",
-      "sameAs": "http://www.codepedia.org/ama/",
+      "sameAs": "https://www.codepedia.org/ama/",
       "image": {
         "@type": "ImageObject",
         "url": "https://avatars1.githubusercontent.com/u/6239971?s=460&v=4"
@@ -33,7 +33,7 @@
       "@type": "Person",
       "name": "Adrian Matei",
       "description": "Software engineer, blogger at Codepedia.org and creator of Bookmarks.dev",
-      "sameAs": "http://www.codepedia.org/ama/",
+      "sameAs": "https://www.codepedia.org/ama/",
       "image": {
         "@type": "ImageObject",
         "url": "https://avatars1.githubusercontent.com/u/6239971?s=460&v=4"
