--- a/_includes/ama-person-JSONLD.html
+++ b/_includes/ama-person-JSONLD.html
@@ -1,7 +1,7 @@
 "@type": "Person",
 "name": "Adrian Matei",
 "description": "Software engineer, blogger at Codepedia.org and creator of Bookmarks.dev",
-"sameAs": "http://www.codepedia.org/ama/",
+"sameAs": "https://www.codepedia.org/ama/",
 "image": {
 "@type": "ImageObject",
 "url": "https://avatars1.githubusercontent.com/u/6239971?s=460&v=4"
