--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,9 @@
             </div>
         {% endif %}
       <h1 class="post-title entry-title">{{ page.title }}</h1>
-      {% include promote-bookmarks.dev.html %}
+      {% if page.categories[0] != "snippets" %}
+        {% include promote-bookmarks.dev.html %}
+      {% endif %}
       {{ content }}
       {% include mailchimp.html %}
       {% if page.republished %}
