--- a/_includes/promote-bookmarks.dev.html
+++ b/_includes/promote-bookmarks.dev.html
@@ -1,12 +1,13 @@
 <hr>
 <div class="promotion">
-  <img src="/images/bookmarks/bookmarks.dev-logo-md.png" alt="Dev-Bookmarks Logo" />
+  <img src="/images/codever/codever-logo-75x75.png" alt="Codever Logo" />
   <p>
-    <strong>(P)</strong><strong> <a href="https://www.bookmarks.dev" target="_blank">Bookmarks.dev</a></strong>
-    - <a href="https://github.com/BookmarksDev/bookmarks.dev" target="_blank">Open source</a> Bookmarks and Code Snippets Manager for Developers & Co.
-    See our <a href="https://www.bookmarks.dev/howto" target="_blank">How To guides</a> to help you get started.
-    Public Bookmarks Repo on <a href="https://github.com/BookmarksDev/bookmarks" target="_blank">Github</a>
-    - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/BookmarksDev/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
+    <strong>(P)</strong><strong> <a href="https://www.codever.land" target="_blank">Codever</a></strong>
+    - <a href="https://github.com/codeverland/codever" target="_blank">Open source</a> Bookmarks and Snippets Manager for Developers & Co.
+    See our <a href="https://www.codever.land/howto" target="_blank">How To guides</a> to help you get started.
+    Public Bookmarks Repo on <a href="https://github.com/codeverland/bookmarks" target="_blank">Github</a>
+    - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/codeverland/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
   </p>
 </div>
 <hr>
+}
