docs(codever): make promotion font size smaller

--- a/_includes/promote-bookmarks.dev.html
+++ b/_includes/promote-bookmarks.dev.html
@@ -3,9 +3,9 @@
   <img src="/images/codever/codever-logo-75x75.png" alt="Codever Logo" />
   <p>
     <strong>(P)</strong><strong> <a href="https://www.codever.land" target="_blank">Codever</a></strong>
-    - <a href="https://github.com/codeverland/codever" target="_blank">Open source</a> Bookmarks and Snippets Manager for Developers & Co.
+    is an <a href="https://github.com/codeverland/codever" target="_blank">open source</a> bookmarks and snippets manager for developers & co.
     See our <a href="https://www.codever.land/howto" target="_blank">How To guides</a> to help you get started.
-    Public Bookmarks Repo on <a href="https://github.com/codeverland/bookmarks" target="_blank">Github</a>
+    Public bookmarks repo on <a href="https://github.com/codeverland/bookmarks" target="_blank">Github</a>
     - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/codeverland/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
   </p>
 </div>
