--- a/_sass/_codingpedia.scss
+++ b/_sass/_codingpedia.scss
@@ -12,10 +12,10 @@
   border-width: 1px;
   border-color: #f6d3c4;
   background-color: #f7f5e7;
-  margin: 1rem;
+  margin: 0.5rem 1rem;
   padding: 0.5rem;
   font-style: italic;
-  font-size: 1.1em;
+  font-size: 1.05em;
 
   img {
     width: 60px;
