style(snippets): add dark mode for code snippets via rouge theme

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -73,3 +73,7 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a 
   border-radius: .2rem;
   line-height: 1.5;
 }
+
+.copy-button {
+  color: white;
+}
