--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,4 +34,5 @@ sitemap: false
 @import "scroll-up";
 @import "clipboardjs";
 @import "codingpedia";
+@import "overwrites";
 @import "examples-posts";
