--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -12,76 +12,204 @@ code.highlighter-rouge {
   word-spacing: normal;
   color: #222;
   border: 1px solid darken($body-color, 5);
-  background-color: #F0F0F0;
+  background-color: black;
   @include rounded(3px);
   pre {
     position: relative;
     margin: 0;
     padding: 1em;
   }
-  .lineno { padding-right: 24px; color: #8f908a;}
-  .c { color: #999988; font-style: italic } /* Comment */
-  .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-  .k { font-weight: bold } /* Keyword */
-  .o { font-weight: bold } /* Operator */
-  .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-  .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-  .c1 { color: #999988; font-style: italic } /* Comment.Single */
-  .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-  .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-  .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
-  .ge { font-style: italic } /* Generic.Emph */
-  .gr { color: #aa0000 } /* Generic.Error */
-  .gh { color: #999999 } /* Generic.Heading */
-  .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-  .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-  .go { color: #888888 } /* Generic.Output */
-  .gp { color: #555555 } /* Generic.Prompt */
-  .gs { font-weight: bold } /* Generic.Strong */
-  .gu { color: #aaaaaa } /* Generic.Subheading */
-  .gt { color: #aa0000 } /* Generic.Traceback */
-  .kc { font-weight: bold } /* Keyword.Constant */
-  .kd { font-weight: bold } /* Keyword.Declaration */
-  .kp { font-weight: bold } /* Keyword.Pseudo */
-  .kr { font-weight: bold } /* Keyword.Reserved */
-  .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-  .m { color: #009999 } /* Literal.Number */
-  .s { color: #d14 } /* Literal.String */
-  .na { color: #008080 } /* Name.Attribute */
-  .nb { color: #0086B3 } /* Name.Builtin */
-  .nc { color: #445588; font-weight: bold } /* Name.Class */
-  .no { color: #008080 } /* Name.Constant */
-  .ni { color: #800080 } /* Name.Entity */
-  .ne { color: #990000; font-weight: bold } /* Name.Exception */
-  .nf { color: #990000; font-weight: bold } /* Name.Function */
-  .nn { color: #555555 } /* Name.Namespace */
-  .nt { color: #000080 } /* Name.Tag */
-  .nv { color: #008080 } /* Name.Variable */
-  .ow { font-weight: bold } /* Operator.Word */
-  .w { color: #bbbbbb } /* Text.Whitespace */
-  .mf { color: #009999 } /* Literal.Number.Float */
-  .mh { color: #009999 } /* Literal.Number.Hex */
-  .mi { color: #009999 } /* Literal.Number.Integer */
-  .mo { color: #009999 } /* Literal.Number.Oct */
-  .sb { color: #d14 } /* Literal.String.Backtick */
-  .sc { color: #d14 } /* Literal.String.Char */
-  .sd { color: #d14 } /* Literal.String.Doc */
-  .s2 { color: #d14 } /* Literal.String.Double */
-  .se { color: #d14 } /* Literal.String.Escape */
-  .sh { color: #d14 } /* Literal.String.Heredoc */
-  .si { color: #d14 } /* Literal.String.Interpol */
-  .sx { color: #d14 } /* Literal.String.Other */
-  .sr { color: #009926 } /* Literal.String.Regex */
-  .s1 { color: #d14 } /* Literal.String.Single */
-  .ss { color: #990073 } /* Literal.String.Symbol */
-  .bp { color: #999999 } /* Name.Builtin.Pseudo */
-  .vc { color: #008080 } /* Name.Variable.Class */
-  .vg { color: #008080 } /* Name.Variable.Global */
-  .vi { color: #008080 } /* Name.Variable.Instance */
-  .il { color: #009999 } /* Literal.Number.Integer.Long */
+}
+
+//generated with "rougify style monokai.sublime > syntax_monokai.css" on terminal
+.highlight table td { padding: 5px; }
+.highlight table pre { margin: 0; }
+.highlight .gh {
+  color: #999999;
+}
+.highlight .sr {
+  color: #f6aa11;
+}
+.highlight .go {
+  color: #888888;
+}
+.highlight .gp {
+  color: #555555;
+}
+.highlight .gs {
+}
+.highlight .gu {
+  color: #aaaaaa;
+}
+.highlight .nb {
+  color: #f6aa11;
+}
+.highlight .cm {
+  color: #75715e;
+}
+.highlight .cp {
+  color: #75715e;
+}
+.highlight .c1 {
+  color: #75715e;
+}
+.highlight .cs {
+  color: #75715e;
+}
+.highlight .c, .highlight .cd {
+  color: #75715e;
+}
+.highlight .err {
+  color: #960050;
+}
+.highlight .gr {
+  color: #960050;
+}
+.highlight .gt {
+  color: #960050;
+}
+.highlight .gd {
+  color: #49483e;
+}
+.highlight .gi {
+  color: #49483e;
+}
+.highlight .ge {
+  color: #49483e;
+}
+.highlight .kc {
+  color: #66d9ef;
+}
+.highlight .kd {
+  color: #66d9ef;
+}
+.highlight .kr {
+  color: #66d9ef;
+}
+.highlight .no {
+  color: #66d9ef;
+}
+.highlight .kt {
+  color: #66d9ef;
+}
+.highlight .mf {
+  color: #ae81ff;
+}
+.highlight .mh {
+  color: #ae81ff;
+}
+.highlight .il {
+  color: #ae81ff;
+}
+.highlight .mi {
+  color: #ae81ff;
+}
+.highlight .mo {
+  color: #ae81ff;
+}
+.highlight .m, .highlight .mb, .highlight .mx {
+  color: #ae81ff;
+}
+.highlight .sc {
+  color: #ae81ff;
+}
+.highlight .se {
+  color: #ae81ff;
+}
+.highlight .ss {
+  color: #ae81ff;
+}
+.highlight .sd {
+  color: #e6db74;
+}
+.highlight .s2 {
+  color: #e6db74;
+}
+.highlight .sb {
+  color: #e6db74;
+}
+.highlight .sh {
+  color: #e6db74;
+}
+.highlight .si {
+  color: #e6db74;
+}
+.highlight .sx {
+  color: #e6db74;
+}
+.highlight .s1 {
+  color: #e6db74;
+}
+.highlight .s {
+  color: #e6db74;
+}
+.highlight .na {
+  color: #a6e22e;
+}
+.highlight .nc {
+  color: #a6e22e;
+}
+.highlight .nd {
+  color: #a6e22e;
+}
+.highlight .ne {
+  color: #a6e22e;
+}
+.highlight .nf {
+  color: #a6e22e;
+}
+.highlight .vc {
+  color: #ffffff;
+}
+.highlight .nn {
+  color: #ffffff;
+}
+.highlight .nl {
+  color: #ffffff;
+}
+.highlight .ni {
+  color: #ffffff;
+}
+.highlight .bp {
+  color: #ffffff;
+}
+.highlight .vg {
+  color: #ffffff;
+}
+.highlight .vi {
+  color: #ffffff;
+}
+.highlight .nv {
+  color: #ffffff;
+}
+.highlight .w {
+  color: #ffffff;
+}
+.highlight {
+  color: #ffffff;
+}
+.highlight .n, .highlight .py, .highlight .nx {
+  color: #ffffff;
+}
+.highlight .ow {
+  color: #f92672;
+}
+.highlight .nt {
+  color: #f92672;
+}
+.highlight .k, .highlight .kv {
+  color: #f92672;
+}
+.highlight .kn {
+  color: #f92672;
+}
+.highlight .kp {
+  color: #f92672;
+}
+.highlight .o {
+  color: #f92672;
 }
 
 code .highlighter-rouge {
   @include font(16);
 }
-
