update(snippet-ending): update point_right to suggest user copy

--- a/_includes/snippet-post-recommendation-ending.html
+++ b/_includes/snippet-post-recommendation-ending.html
@@ -1,6 +1,6 @@
 <p class="note_normal">
   Shared with <i class="fa fa-heart" style="color:orangered"></i> from <a href="https://www.codever.land/snippets/{{ include.snippetId }}/details">Codever.land</a>.
-  :point_right: Use the <a href="https://www.codever.land/snippets/{{ include.snippetId }}/details" class="copy-to-mine-btn"><i class="fa fa-copy"></i> Copy to mine</a>
+  👉 Use the <a href="https://www.codever.land/snippets/{{ include.snippetId }}/details" class="copy-to-mine-btn"><i class="fa fa-copy"></i> Copy to mine</a>
   functionality to copy this snippet to your own personal collection and easy manage
   your code snippets.
 </p>
