add link to github on snippet posts

--- a/_includes/snippet-post-recommendation-ending.html
+++ b/_includes/snippet-post-recommendation-ending.html
@@ -3,4 +3,8 @@
   👉 Use the <a href="https://www.codever.land/snippets/{{ include.snippetId }}/details" class="copy-to-mine-btn"><i class="fa fa-copy"></i> Copy to mine</a>
   functionality to copy this snippet to your own personal collection and easy manage
   your code snippets.
+  <br>
+  <br>
+  <b>Codever</b> is open source on <a href="https://github.com/codeverland">Github</a> ⭐🙏
+
 </p>
