--- a/_includes/promote-bookmarks.dev.html
+++ b/_includes/promote-bookmarks.dev.html
@@ -5,8 +5,7 @@
     <strong>(P)</strong><strong> <a href="https://www.codever.land" target="_blank">Codever</a></strong>
     is an <a href="https://github.com/codeverland/codever" target="_blank">open source</a> bookmarks and snippets manager for developers & co.
     See our <a href="https://www.codever.land/howto" target="_blank">How To guides</a> to help you get started.
-    Public bookmarks repo on <a href="https://github.com/codeverland/bookmarks" target="_blank">Github</a>
-    - <span style="vertical-align: middle"><a class="github-button" href="https://github.com/codeverland/bookmarks" data-icon="octicon-star" aria-label="Star ntkme/github-buttons on GitHub">Star</a></span>
+    Public bookmarks repos on <a href="https://github.com/codeverland/" target="_blank">Github</a> ⭐🙏
   </p>
 </div>
 <hr>
