replace codever.land with codever.dev

--- a/_includes/action-to-star-bookmarksdev-on-github.html
+++ b/_includes/action-to-star-bookmarksdev-on-github.html
@@ -1,6 +1,6 @@
 <p class="note_normal">
   If you liked this, please show some love and give us a star
   <span style="vertical-align: middle">
-    <a class="github-button" href="https://github.com/codeverland/codever" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star BookmarksDev/codever.land on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/CodeverDotDev/codever" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star BookmarksDev/codever.land on GitHub">Star</a>
   </span>
 </p>
