--- a/_includes/ama-person-JSONLD.html
+++ b/_includes/ama-person-JSONLD.html
@@ -1,6 +1,6 @@
 "@type": "Person",
 "name": "Adrian Matei",
-"description": "Software engineer, blogger at Codepedia.org and creator of Bookmarks.dev",
+"description": "Software engineer, blogger at Codepedia.org and creator of Codever.dev",
 "sameAs": "https://www.codepedia.org/ama/",
 "image": {
 "@type": "ImageObject",
