--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
 {% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
 {% if page.snippetId %}
-<link rel="canonical" href="https://www.codever.land/snippets/{{ page.snippetId }}/details">
+<link rel="canonical" href="https://www.codever.dev/snippets/{{ page.snippetId }}/details">
 {% else %}
 {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
 <link rel="canonical" href="{{ canonical }}">
