--- a/_includes/promote-bookmarks.dev.html
+++ b/_includes/promote-bookmarks.dev.html
@@ -2,10 +2,10 @@
 <div class="promotion">
   <img src="/images/codever/codever-logo-75x75.png" alt="Codever Logo" />
   <p>
-    <strong>(P)</strong><strong> <a href="https://www.codever.land" target="_blank">Codever</a></strong>
-    is an <a href="https://github.com/codeverland/codever" target="_blank">open source</a> bookmarks and snippets manager for developers & co.
-    See our <a href="https://www.codever.land/howto" target="_blank">How To guides</a> to help you get started.
-    Public bookmarks repos on <a href="https://github.com/codeverland/" target="_blank">Github</a> ⭐🙏
+    <strong>(P)</strong><strong> <a href="https://www.codever.dev" target="_blank">Codever</a></strong>
+    is an <a href="https://github.com/CodeverDotDev/codever" target="_blank">open source</a> bookmarks and snippets manager for developers & co.
+    See our <a href="https://www.codever.dev/howto" target="_blank">How To guides</a> to help you get started.
+    Public bookmarks repos on <a href="https://github.com/CodeverDotDev/" target="_blank">Github</a> ⭐🙏
   </p>
 </div>
 <hr>
