--- a/_includes/snippet-post-recommendation-ending.html
+++ b/_includes/snippet-post-recommendation-ending.html
@@ -1,10 +1,10 @@
 <p class="note_normal">
-  Shared with <i class="fa fa-heart" style="color:orangered"></i> from <a href="https://www.codever.land/snippets/{{ include.snippetId }}/details">Codever.land</a>.
-  👉 Use the <a href="https://www.codever.land/snippets/{{ include.snippetId }}/details" class="copy-to-mine-btn"><i class="fa fa-copy"></i> Copy to mine</a>
+  Shared with <i class="fa fa-heart" style="color:orangered"></i> from <a href="https://www.codever.dev/snippets/{{ include.snippetId }}/details">Codever.land</a>.
+  👉 Use the <a href="https://www.codever.dev/snippets/{{ include.snippetId }}/details" class="copy-to-mine-btn"><i class="fa fa-copy"></i> Copy to mine</a>
   functionality to copy this snippet to your own personal collection and easy manage
   your code snippets.
   <br>
   <br>
-  <b>Codever</b> is open source on <a href="https://github.com/codeverland">Github</a> ⭐🙏
+  <b>Codever</b> is open source on <a href="https://github.com/CodeverDotDev">Github</a> ⭐🙏
 
 </p>
