replace codever.land with codever.dev

--- a/_includes/source-code-bookmarks.dev.html
+++ b/_includes/source-code-bookmarks.dev.html
@@ -1,6 +1,6 @@
 <p class="note_normal">
   <img style="float: left; width: 35px; height: 29px; margin-right: 10px;" src="{{site.url}}/wp-content/uploads/2015/06/Octocat-smaller.png" alt="Octocat" />
-  Source code for <a href="https://www.codever.dev" target="_blank">codever.land</a> is available on <a href="https://github.com/CodeverDotDev/codever" target="_blank">Github</a> -
+  Source code for <a href="https://www.codever.dev" target="_blank">codever.dev</a> is available on <a href="https://github.com/CodeverDotDev/codever" target="_blank">Github</a> -
   <span style="vertical-align: middle">
     <a class="github-button" href="https://github.com/CodeverDotDev/codever" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Codever on GitHub">Star</a>
   </span>
